# flatter

./: CMakeLists.txt
apps/: flatter.cpp
include/flatter/data/lattice/: lattice.h
src/data/lattice/: lattice.cpp
src/data/matrix/: matrix_data.cpp  matrix_data_double.cpp  matrix_data_mpfr.cpp  matrix_data_mpz.cpp
src/problems/lattice_reduction/: CMakeLists.txt  base.cpp  cond_unknown.cpp  cond_unknown.h  irregular.cpp  lagrange.cpp  lattice_reduction.cpp  schoenhage.cpp
